[project]
name = "llm-claude-code"
version = "0.1.2"
description = "LLM plugin for Claude models via the Claude Agent SDK"
readme = "README.md"
authors = [{name = "Van Lindberg"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.10"
dependencies = [
    "llm>=0.28",
    "claude-agent-sdk>=0.1.44",
]

[project.urls]
Homepage = "https://github.com/VanL/llm-claude-code"
Changelog = "https://github.com/VanL/llm-claude-code/releases"
Issues = "https://github.com/VanL/llm-claude-code/issues"
CI = "https://github.com/VanL/llm-claude-code/actions"

[project.entry-points.llm]
claude_code = "llm_claude_code"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
